--- a/docs/collect/精品嵌入式资源汇总.md
+++ b/docs/collect/精品嵌入式资源汇总.md
@@ -1,3 +1,5 @@
+# 精品嵌入式资源汇总
+
 > 本文由 [简悦 SimpRead](http://ksria.com/simpread/) 转码， 原文地址 [github.com](https://github.com/zhengnianli/EmbedSummary)
 
 > 精品嵌入式资源汇总. Contribute to zhengnianli/EmbedSummary development by creating an account on GitHub.
